fixed problem with overflow-scrolling on Firefox

--- a/src/components/LeftNav/ds-left-nav.scss
+++ b/src/components/LeftNav/ds-left-nav.scss
@@ -40,7 +40,6 @@
   }
 
   .ds-leftnav-subnav-list {
-    overflow: scroll; 
     padding: ds-space(base) 0 0 ds-space(loose);
     display: none;
     opacity: 0;
